--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -5,3 +5,7 @@
         crossorigin="anonymous"
         async>
 </script>
+{{- /* Comments area start */ -}}
+{{- /* to add comments read => https://gohugo.io/content-management/comments/ */ -}}
+{{- /* Comments area end */ -}}
+
