--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,6 +1,6 @@
 {{- /* Comments area start */ -}}
 <script src="https://utteranc.es/client.js"
-        repo="https://github.com/gsrinivasachar/achar"
+        repo="gsrinivasachar/achar"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
